<resources>
    <string name="app_name">Rugby Score Buddy</string>
    <string name="hint_rugbyscoreHomeTeam">Home Team</string>
    <string name="hint_rugbyscoreHomeTeamTries">0</string>
    <string name="hint_rugbyscoreHomeTeamConversions">0</string>
    <string name="hint_rugbyscoreHomeTeamPenalties">0</string>
    <string name="hint_rugbyscoreAwayTeam">Away Team</string>
    <string name="hint_rugbyscoreAwayTeamTries">0</string>
    <string name="hint_rugbyscoreAwayTeamConversions">0</string>
    <string name="hint_rugbyscoreAwayTeamPenalties">0</string>
    <string name="textAddTeamHeading"> Game Details </string>
    <string name="textVersus">VS</string>">
    <string name="button_addRugbyGame">ADD\nGAME</string>
    <string name="save_RugbyGame"> SAVE\nGAME</string>
    <string name="button_addImage">ADD\nIMAGE</string>
    <string name="button_location">SET\nLOCATION</string>
    <string name="change_rugbygame_image">UPDATE\nIMAGE</string>
    <string name="select_rugbygame_image">Select Game Image</string>
    <string name="menu_addRugbyGame">Add</string>
    <string name="menu_cancelRugbyGame">Cancel</string>
    <string name="menu_logoutRugbyGame">Logout</string>
    <string name="menu_deleteRugbyGame">Delete</string>
    <string name="enter_RugbyTeamNames"> Please Enter Team Names </string>
    <string name="enter_RugbyHomeTeamName"> Please Enter a Home Team Name </string>
    <string name="enter_RugbyAwayTeamName"> Please Enter a Away Team Name </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_rugbyscore_maps">Map of All Rugby Games</string>
    <string name="maps_description">Cick a marker to see details for that game</string>
    <string name="splash_text">Login or Signup to continue.</string>"
    <string name="splash_button_login">Login</string>
    <string name="splash_button_signup">Signup</string>
    <string name="login_text">Login to continue\nyour journey with us.</string>
    <string name="signup_text">Fill your information below to Sign Up</string>

</resources>