<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.setu.rugbyscorebuddy.activities.RugbyScoreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/textAddTeamHeading"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="32sp" />

                <EditText
                    android:id="@+id/rugbyscoreHomeTeam"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_rugbyscoreHomeTeam"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtHomeTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_marginLeft="40dp"
                        android:text="Tries"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/txtHomeConversions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="48dp"
                        android:padding="10dp"
                        android:text="Conversions"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtHomePenalties"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_marginLeft="30dp"
                        android:text="Penalties"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <org.setu.rugbyscorebuddy.helpers.HorizontalNumberPicker
                        android:id="@+id/noHomeTries"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <org.setu.rugbyscorebuddy.helpers.HorizontalNumberPicker
                        android:id="@+id/noHomeConversions"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <org.setu.rugbyscorebuddy.helpers.HorizontalNumberPicker
                        android:id="@+id/noHomePenalties"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/textScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="35dp"
                        android:padding="10dp"
                        android:text="SCORE"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textHomeScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="0"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="48sp"
                        android:inputType="number"/>

                    <TextView
                        android:id="@+id/textColon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text=":"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/textAwayScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="0"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="48sp"
                        android:inputType="number"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <org.setu.rugbyscorebuddy.helpers.HorizontalNumberPicker
                        android:id="@+id/noAwayTries"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <org.setu.rugbyscorebuddy.helpers.HorizontalNumberPicker
                        android:id="@+id/noAwayConversions"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <org.setu.rugbyscorebuddy.helpers.HorizontalNumberPicker
                        android:id="@+id/noAwayPenalties"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtAwayTries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_marginLeft="40dp"
                        android:text="Tries"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtAwayConversions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_marginLeft="48dp"
                        android:text="Conversions"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtAwayPenalties"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:layout_marginLeft="30dp"
                        android:text="Penalties"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/rugbyscoreAwayTeam"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_rugbyscoreAwayTeam"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:padding="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addRugbyGame"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>